[gd_scene load_steps=4 format=3 uid="uid://cw3o7gwynkyqn"]

[ext_resource type="Script" uid="uid://b3gpng51unqr8" path="res://scripts/main_menu.gd" id="1_sxhpj"]
[ext_resource type="FontFile" uid="uid://cehtepccbhxnb" path="res://assets/fonts/upheavtt.ttf" id="2_ekxnf"]

[sub_resource type="Theme" id="Theme_ieorl"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxhpj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 122.0
offset_top = -214.0
offset_right = 497.0
offset_bottom = -83.0
grow_vertical = 0
theme = SubResource("Theme_ieorl")

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 36
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 36
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 36
text = "Quit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_top = 40.0
offset_right = -62.0
offset_bottom = 80.0
grow_horizontal = 0

[node name="English" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 24
text = "English"

[node name="LanguageToggle" type="CheckButton" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
button_pressed = true

[node name="Spanish" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 24
text = "Espa√±ol"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="HBoxContainer/LanguageToggle" to="." method="_on_language_toggle_toggled"]
